* heavily improved Subscene support (up to 35x faster)